--- a/AppliAndroid/app/src/main/res/layout/activity_main.xml
+++ b/AppliAndroid/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.629" />
 
     <Button
-        android:id="@+id/button_0B6"
+        android:id="@+id/button0B6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0B6"
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.304" />
 
     <Button
-        android:id="@+id/button_128"
+        android:id="@+id/button128"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="128"
