--- a/AppliAndroid/app/src/main/res/layout/activity_main.xml
+++ b/AppliAndroid/app/src/main/res/layout/activity_main.xml
@@ -160,22 +160,34 @@
         android:id="@+id/ValidButt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="304dp"
+        android:layout_marginTop="12dp"
         android:text="Valider"
         app:layout_constraintStart_toEndOf="@+id/InputIp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/InputIp"
-        android:layout_width="366dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="28dp"
+        android:layout_width="266dp"
+        android:layout_height="63dp"
         android:ems="10"
         android:inputType="text"
         android:text="172.20.21.38"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.105"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.016" />
+
+    <EditText
+        android:id="@+id/editTextText2"
+        android:layout_width="213dp"
+        android:layout_height="67dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        tools:layout_editor_absoluteX="407dp"
+        tools:layout_editor_absoluteY="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
